tests/snapshots/integration__bind_env__bind_env_options_choice_err.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
error: invalid value `oca` for environment variable `BIND_ENVS_OCA` that bound to `--oca`
  [possible values: a, b]


# BUILD_OUTPUT
error: invalid value `oca` for environment variable `BIND_ENVS_OCA` that bound to `--oca <OCA>`
  [possible values: a, b]
