tests/snapshots/integration__bind_env__bind_env_options_choice_fn_err.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
error: invalid value `ofa` for environment variable `BIND_ENVS_OFA` that bound to `--ofa`
  [possible values: abc, def, ghi]


# BUILD_OUTPUT
error: invalid value `ofa` for environment variable `BIND_ENVS_OFA` that bound to `--ofa <OFA>`
  [possible values: abc, def, ghi]
