tests/snapshots/integration__bind_env__bind_env_options_choice_ok.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
argc__args=([0]="bind-envs" [1]="options" [2]="--oca" [3]="a")
argc__fn=options
argc__positionals=()
argc_ob=ob
argc_oca=a
argc_oda=a
argc_odb=argc
options


# BUILD_OUTPUT
argc__args=([0]="prog" [1]="options" [2]="--oca" [3]="a")
argc__fn=options
argc__positionals=()
argc_ob=ob
argc_oca=a
argc_oda=a
argc_odb=argc
options
