tests/snapshots/integration__bind_env__bind_env_options_help.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
USAGE: bind-envs options [OPTIONS] --ob <OB>

OPTIONS:
      --oa1 <OA1>     [env: BIND_ENVS_OA1]
      --oa2 <OA2>     [env: BIND_ENVS_OA2]
      --oa3 <OA3>     [env: OA]
      --ob <OB>       [env: OB]
      --oc [OC]...    [env: BIND_ENVS_OC]
      --oda <ODA>     [default: a] [env: BIND_ENVS_ODA]
      --odb <ODB>     [env: BIND_ENVS_ODB]
      --oca <OCA>     [possible values: a, b] [env: BIND_ENVS_OCA]
      --occ [OCC]...  [possible values: a, b] [env: BIND_ENVS_OCC]
      --ofa <OFA>     [env: BIND_ENVS_OFA]
      --ofd [OFD]...  [env: BIND_ENVS_OFD]
      --oxa <OXA~>    [env: BIND_ENVS_OXA]
  -h, --help



# BUILD_OUTPUT
USAGE: bind-envs options [OPTIONS] --ob <OB>

OPTIONS:
      --oa1 <OA1>     [env: BIND_ENVS_OA1]
      --oa2 <OA2>     [env: BIND_ENVS_OA2]
      --oa3 <OA3>     [env: OA]
      --ob <OB>       [env: OB]
      --oc [OC]...    [env: BIND_ENVS_OC]
      --oda <ODA>     [default: a] [env: BIND_ENVS_ODA]
      --odb <ODB>     [env: BIND_ENVS_ODB]
      --oca <OCA>     [possible values: a, b] [env: BIND_ENVS_OCA]
      --occ [OCC]...  [possible values: a, b] [env: BIND_ENVS_OCC]
      --ofa <OFA>     [env: BIND_ENVS_OFA]
      --ofd [OFD]...  [env: BIND_ENVS_OFD]
      --oxa <OXA~>    [env: BIND_ENVS_OXA]
  -h, --help
