tests/snapshots/integration__bind_env__bind_env_options_required_err.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
error: the following required arguments were not provided:
  --ob <OB>


# BUILD_OUTPUT
error: the following required arguments were not provided:
  --ob <OB>
