tests/snapshots/integration__bind_env__bind_env_with_notation_help.snap
---
source: tests/bind_env.rs
expression: "format! (r#\"\n# OUTPUT\n{output}\n\n# BUILD_OUTPUT\n{build_output}\n\"#)"
---

# OUTPUT
USAGE: bind-envs cmd_for_notation [OPTIONS] [XYZ]

ARGS:
  [XYZ]  [env: BIND_ENVS_VAL]

OPTIONS:
      --OA <XYZ>  [env: BIND_ENVS_OA]
  -h, --help



# BUILD_OUTPUT
USAGE: bind-envs cmd_for_notation [OPTIONS] [XYZ]

ARGS:
  [XYZ]  [env: BIND_ENVS_VAL]

OPTIONS:
      --OA <XYZ>  [env: BIND_ENVS_OA]
  -h, --help
